<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/margin_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_application"
            android:textSize="@dimen/text_40"
            android:textStyle="bold|italic" />
    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:elevation="@dimen/margin_8"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/margin_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_stories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager_story"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_14">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_gray"
                    android:drawableStart="@drawable/ic_search"
                    android:hint="@string/hint_search"
                    android:paddingVertical="@dimen/margin_8"
                    android:paddingStart="@dimen/margin_12"
                    android:paddingEnd="@dimen/margin_8"
                    android:textSize="@dimen/text_18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_microphone"
                    android:layout_width="@dimen/margin_24"
                    android:layout_height="@dimen/margin_32"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:background="@drawable/ic_voice"
                    app:layout_constraintBottom_toBottomOf="@id/edt_search"
                    app:layout_constraintEnd_toEndOf="@id/edt_search"
                    app:layout_constraintTop_toTopOf="@id/edt_search" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_campaigns"
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/title_campaigns"
                    android:textSize="@dimen/text_16"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/txt_see_all"
                    android:textColor="@color/dark_gray" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                android:background="@drawable/bg_gray"
                android:padding="@dimen/margin_24">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    app:layout_constraintBottom_toBottomOf="@id/pager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tabBackground="@drawable/tab_indicator_dot"
                    app:tabGravity="center"
                    app:tabIndicatorGravity="center"
                    app:tabIndicatorHeight="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/title_near_me"
                    android:textSize="@dimen/text_16"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/txt_see_all"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_near_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/title_last_services_received"
                    android:textSize="@dimen/text_16"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/txt_see_all"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_last_services_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/title_best_week"
                    android:textSize="@dimen/text_16"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/txt_see_all"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_best_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>